--- a/RobotBuilds/Esp32-Stream-Robot2/NodeServer/package.json
+++ b/RobotBuilds/Esp32-Stream-Robot2/NodeServer/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.25.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ip": "^1.1.8",
     "path": "^0.12.7",
     "url": "^0.11.1",
     "ws": "^8.13.0"
